--- a/views/layouts/footer.ejs
+++ b/views/layouts/footer.ejs
@@ -1,16 +1,30 @@
-<footer class="footer bg-blue">
+<footer class="page-footer">
     <div class="container">
-        <span class="text-white"> &copy; 2018 My Goals</span>
+        <div class="row">
+            <div class="col l6 s12">
+                <h5 class="white-text">Footer Content</h5>
+                <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+            </div>
+            <div class="col l4 offset-l2 s12">
+                <h5 class="white-text">Links</h5>
+                <ul>
+                    <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+                    <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+                    <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+                    <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="footer-copyright">
+        <div class="container">
+            © 2014 Copyright Text
+            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+        </div>
     </div>
 </footer>
+<!--JavaScript at end of body for optimized loading-->
+<script type="text/javascript" src="js/materialize.min.js"></script>
 
-<!-- Bootstrap core JavaScript
-================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
-<script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
-<script type="text/javascript" src="/javascripts/jquery-3.3.1.js"></script>
-<script type="text/javascript" src="/javascripts/bootstrap.min.js"></script>
-<!--<script type="text/javascript" src="/javascripts/custom.js"></script>-->
-<!--<script type="text/javascript" src="/javascripts/datatables.min.js"></script>-->
-</body>
 </html>
+
