--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title> <%= title %> </title>
-    <!--Import Google Icon Font-->
+    <title> <%= title %></title>
     <link rel="icon"
           type="image/png"
           href="images/fav.png">
-
+    <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="stylesheets/bootstrap.min.css"  media="screen,projection"/>
-    <link type="text/css" rel="stylesheet" href="/stylesheets/style.css"  media="screen,projection"/>
-    <link type="text/css" rel="stylesheet" href="/stylesheets/animate.css"  media="screen,projection"/>
-    <!--<link rel="stylesheet" type="text/css" href="/stylesheets/datatables.min.css"/>-->
+    <link type="text/css" rel="stylesheet" href="stylesheets/materialize.min.css"  media="screen,projection"/>
 
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta charset="UTF-8">
 </head>
+
+
