--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,18 +1,26 @@
 <% include layouts/header.ejs %>
 <!-- Begin page content -->
-<body>
-<main role="main" class="container">
-    <div class="s-10 m-6 l-4">
-    <form class="form-signin">
-        <img class="mb-4" src="images/fav.png" alt="" width="72" height="72">
-            <label for="inputEmail" class="sr-only">Email address</label>
-            <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+<body class="blue-grey darken-4">
+    <main>
+    <div class="container">
+        <div class="row center">
+            <div class="s12 m4 l4 offset-l4 offset-m4">
+                <div class="row">
+                    <div class="s12 m12 l12">
+                        <div class="card">
+                            <div class="card-content black-text">
+                                <span class="card-title">Please sign in</span>
 
-            <label for="inputPassword" class="sr-only">Password</label>
-            <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-        <p class="mt-5 mb-3 text-muted">&copy; 2018</p>
-    </form>
+                            </div>
+                            <div class="card-action">
+                                <input type="submit" class="btn blue" value="Sign in">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-</main>
+    </main>
+</body>
+
