--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,17 +1,15 @@
-<% include layouts/header.ejs %>
+<% include ../layouts/header.ejs %>
 <!-- Begin page content -->
 <body class="dw-blue-3">
     <main style="">
     <div class="container">
         <div class="row">
             <div class="col s12 m7 l7">
-                <h1>
-                    My Goals
-                </h1>
+
             </div>
             <div class="col s12 m5 l5" style="margin-top: 5%">
                 <div class="center-align">
-                    <img src="images/fav.png" style="height: 25%; width: 25%;">
+                    <img src="../images/fav.png" style="height: 25%; width: 25%;">
                 </div>
                 <div class="card">
                     <div class="card-tabs">
