--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -1,7 +1,7 @@
 <header>
 <nav>
-    <div class="nav-wrapper">
-        <a href="#!" class="brand-logo"><i class="material-icons">cloud</i>Logo</a>
+    <div class="nav-wrapper dw-blue-2">
+        <a href="#!" class="brand-logo"><i class="material-icons"></i>My Goals</a>
         <ul class="right hide-on-med-and-down">
             <li><a href="sass.html"><i class="material-icons">search</i></a></li>
             <li><a href="badges.html"><i class="material-icons">view_module</i></a></li>
