--- a/views/layouts/footer.ejs
+++ b/views/layouts/footer.ejs
@@ -8,12 +8,14 @@
                     theYear = theYear + 1900
                 document.write(theYear)
             </script> DWIT
-            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+            <!--<a class="grey-text text-lighten-4 right" href="#!">More Links</a>-->
         </div>
     </div>
 </footer>
 <!--JavaScript at end of body for optimized loading-->
-<script type="text/javascript" src="../js/materialize.min.js"></script>
-
+<script type="text/javascript" src="../javascripts/materialize.min.js"></script>
+<script type="text/javascript">
+    $(".button-collapse").sideNav();
+</script>
 </html>
 
