Created all the files and arranged them

--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -1,6 +1,6 @@
 <% include ../layouts/header.ejs %>
-
-<body>
+<% include ../layouts/navbar.ejs %>
+<body class="bg">
 <br><br>
 <main>
     <div class="container">
