--- a/views/layouts/footer.ejs
+++ b/views/layouts/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="page-footer white">
+<footer class="page-footer transparent">
     <div class="footer-copyright dw-blue-1">
         <div class="container">
             © <script language="JavaScript" type="text/javascript">
@@ -14,8 +14,5 @@
 </footer>
 <!--JavaScript at end of body for optimized loading-->
 <script type="text/javascript" src="../javascripts/materialize.min.js"></script>
-<script type="text/javascript">
-    $(".button-collapse").sideNav();
-</script>
 </html>
 
