--- a/views/user/dashboard.ejs
+++ b/views/user/dashboard.ejs
@@ -1,6 +1,6 @@
 <% include ../layouts/header.ejs %>
 <% include ../layouts/navbar.ejs %>
-<body>
+<body class="bg">
 <main>
 <div class="container">
     <h4 class="center-align"> All Users </h4>
