--- a/views/layouts/footer.ejs
+++ b/views/layouts/footer.ejs
@@ -12,7 +12,9 @@
         </div>
     </div>
 </footer>
-<!--JavaScript at end of body for optimized loading-->
+<!--Import jQuery before materialize.js-->
+<script type="text/javascript" src="../javascripts/jquery-3.3.1.js"></script>
 <script type="text/javascript" src="../javascripts/materialize.min.js"></script>
+<script type="text/javascript" src="../javascripts/script.js"></script>
 </html>
 
