--- a/views/award/create.ejs
+++ b/views/award/create.ejs
@@ -31,23 +31,23 @@
                                     </div>
                                     <div class="row">
                                         <div class="input-field col l6 m6 s12">
-                                            <select id="awardIcon" name="awardIcon">
+                                            <select id="iconName" name="iconName">
                                                 <option value="" disabled selected>Choose your option</option>
                                                 <option value="flag">Flag</option>
                                                 <option value="book">Book</option>
-                                                <option value="star_rate">Star</option>
+                                                <option value="grade">Star</option>
                                             </select>
-                                            <label for="awardIcon">Select Icon For Award</label>
+                                            <label for="iconName">Select Icon Name For Award</label>
                                         </div>
                                         <div class="input-field col l6 m6 s12">
-                                            <select id="awardIconColor" name="awardIconColor">
+                                            <select id="iconColor" name="iconColor">
                                                 <option value="" disabled selected>Choose your option</option>
                                                 <option value="green">Green</option>
                                                 <option value="red">Red</option>
                                                 <option value="blue">Blue</option>
                                                 <option value="yellow">Yellow</option>
                                             </select>
-                                            <label for="awardIconColor">Select Color of Icon For Award</label>
+                                            <label for="iconColor">Select Color of Icon For Award</label>
                                         </div>
                                         <a class="modal-trigger" href="#helpModal">Help</a>
                                     </div>
@@ -104,7 +104,7 @@
         </table>
     </div>
     <div class="modal-footer">
-        <a href="" class="modal-close waves-effect waves-red red btn-flat">Close</a>
+        <a href="" class="modal-close waves-effect waves-red btn-flat">Close</a>
     </div>
 </div>
 </body>
