--- a/views/award/list.ejs
+++ b/views/award/list.ejs
@@ -14,6 +14,9 @@
                     <thead>
                     <th> S. No. </th>
                     <th> Award Title </th>
+                    <th>Icon Name</th>
+                    <th>Icon Color</th>
+                    <th>Icon</th>
                     <th> Action </th>
                     </thead>
                     <tbody>
@@ -22,7 +25,10 @@
                     <tr>
                         <td> <%= i++ %> </td>
                         <td> <%= award.title %> </td>
-                        <td> <a href="./edit?id=<%=award.id%>">Edit </a> | Delete </td>
+                        <td> <%= award.iconName %> </td>
+                        <td> <%= award.iconColor %> </td>
+                        <td><i class="material-icons circle <%=award.iconColor%>"><%=award.iconName%></i></td>
+                        <td><a href="./edit?id=<%=award.id%>">Edit </a> | <a href="./delete?id=<%=award.id%>">Delete</a> </td>
                     </tr>
                     <% }) %>
                     </tbody>
