--- a/views/layouts/footer.ejs
+++ b/views/layouts/footer.ejs
@@ -16,5 +16,6 @@
 <script type="text/javascript" src="../javascripts/jquery-3.3.1.js"></script>
 <script type="text/javascript" src="../javascripts/materialize.min.js"></script>
 <script type="text/javascript" src="../javascripts/script.js"></script>
+<script type="text/javascript" src="../javascripts/datatables.min.js"></script>
 </html>
 
