--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -10,6 +10,7 @@
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="../stylesheets/materialize.min.css"  media="screen,projection"/>
     <link type="text/css" rel="stylesheet" href="../stylesheets/style.css"  media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="../stylesheets/datatables.min.css"  media="screen,projection"/>
 
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
