Changed award user interface

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -65,3 +65,14 @@ main {
 .tab-header {
     font-size: 22px;
 }
+
+#mailText {
+    float: right;
+    margin-top: -14%;
+}
+
+@media (max-width: 360px) {
+    #mailText {
+        margin-top: -17%;
+    }
+}
