--- a/views/user/list.ejs
+++ b/views/user/list.ejs
@@ -35,7 +35,7 @@
                         <td> <%= user.name %> </td>
                         <td> <%= user.email + "@deerwalk.edu.np"%> </td>
                         <td>
-                            <a href="/user/edit" class="btn-floating btn waves-effect waves-light dw-green-1">
+                            <a href="/user/edit?id=<%= user.id %>" class="btn-floating btn waves-effect waves-light dw-green-1">
                                 <i class="material-icons">edit</i>
                             </a>
                         </td>
