--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,13 +1,12 @@
 <% include ../layouts/header.ejs %>
 <!-- Begin page content -->
 <body class="dw-blue-3">
-    <main style="">
+    <main>
     <div class="container">
         <div class="row">
-            <div class="col s12 m7 l7">
-
+            <div class="col s12 m2 l7">
             </div>
-            <div class="col s12 m5 l5" style="margin-top: 5%">
+            <div class="col s12 m8 l5" style="margin-top: 5%">
                 <div class="center-align">
                     <img src="../images/fav.png" style="height: 25%; width: 25%;">
                 </div>
@@ -25,19 +24,17 @@
                         <div id="login">
                             <div class="row">
 
-                                <form class="col s12">
+                                <form class="col s12" action="/auth" method="POST" autocomplete="off">
                                     <div class="row">
 
-                                        <div class="input-field col s12">
+                                        <div class="input-field col s8">
                                             <i class="material-icons prefix">account_circle</i>
-                                            <input id="email" type="email" class="validate">
-                                            <label for="email">Email</label>
+                                            <input id="email" type="text" name="email" class="validate">
                                         </div>
-
+                                        <span id="mailText">@deerwalk.edu.np</span>
                                         <div class="input-field col s12">
                                             <i class="material-icons prefix">lock</i>
-                                            <input id="password" type="password" class="validate">
-                                            <label for="password">Password</label>
+                                            <input id="password" type="password" name="password" class="validate">
                                         </div>
 
                                         <div class="input-field col s12 center">
@@ -59,5 +56,9 @@
     </main>
 </body>
 
-<script type="text/javascript" src="javascripts/materialize.min.js"></script>
+<script type="text/javascript" src="../javascripts/jquery-3.3.1.js"></script>
+<script type="text/javascript" src="../javascripts/materialize.min.js"></script>
+<script type="text/javascript" src="../javascripts/datatables.min.js"></script>
+<script type="text/javascript" src="../javascripts/script.js"></script>
+</html>
 
