Updated admin dashboard

--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -7,7 +7,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col l4 m4 s6">
-                <br>
+                <h5> Hello <%= sess.name %>! </h5><br>
                 <div class="card">
                     <div class="card-tabs">
                         <ul class="tabs tabs-fixed-width">
@@ -37,7 +37,7 @@
                 </div>
             </div>
             <div class="col l4 m4 s6">
-                <br>
+                <h5>&nbsp;</h5><br>
                 <div class="card">
                     <div class="card-tabs">
                         <ul class="tabs tabs-fixed-width">
@@ -67,7 +67,7 @@
                 </div>
             </div>
             <div class="col l4 m4 s12">
-
+                <br>
                 <div class="card">
                     <div class="card-content">
                         <div class="row">
