User Profile Id

--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -76,17 +76,17 @@
                                     <li class="collection-item avatar">
                                         <img src="../images/user.png" alt="" class="circle">
                                         <p>User Count</p>
-                                        <span class="secondary-content text-dw-green-1">12</span>
+                                        <span class="secondary-content text-dw-green-1"><%= users %></span>
                                     </li>
                                     <li class="collection-item avatar">
                                         <i class="material-icons circle red">flag</i>
                                         <p>Goal Count</p>
-                                        <span class="secondary-content text-dw-green-1">435</span>
+                                        <span class="secondary-content text-dw-green-1"><%= goal %></span>
                                     </li>
                                     <li class="collection-item avatar">
                                         <i class="material-icons circle yellow accent-4">grade</i>
                                         <p>Awards Given</p>
-                                        <span class="secondary-content text-dw-green-1">99</span>
+                                        <span class="secondary-content text-dw-green-1"><%= users %></span>
                                     </li>
                                 </ul>
                             </div>
