--- a/views/user/dashboard.ejs
+++ b/views/user/dashboard.ejs
@@ -2,10 +2,85 @@
 <% include ../layouts/navbar.ejs %>
 <body class="bg">
 <main>
-<div class="container">
+<div class="container-fluid">
     <div class="row">
-        <div class="col l12 s12 m12">
-
+        <div class="col l4 s12 m4">
+            <h5> Hello <%= sess.name %>! </h5><br>
+            <div class="card">
+                <div class="card-tabs">
+                    <ul class="tabs tabs-fixed-width">
+                        <li class="tab dw-blue-1">
+                            <a href="#user" class="left-align white-text">
+                                <i class="material-icons">person</i> <span class="tab-header"> My Profile </span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="card-content">
+                    <div class="row">
+                        <div class="col s12 center-align">
+                            <a href="/user/profile/?id=<%= sess.id %>" class="btn-floating btn-large waves-effect waves-light">
+                                <i class="material-icons">person</i>
+                            </a>
+                            <h5>View</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col l4 s12 m4">
+            <h5>&nbsp;</h5><br>
+            <div class="card">
+                <div class="card-tabs">
+                    <ul class="tabs tabs-fixed-width">
+                        <li class="tab dw-blue-1">
+                            <a href="#user" class="left-align white-text">
+                                <i class="material-icons">my_location</i> <span class="tab-header"> My Goals </span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="card-content">
+                    <div class="row">
+                        <div class="col s6 center-align">
+                            <a href="/goal/create" class="btn-floating btn-large waves-effect waves-light">
+                                <i class="material-icons">add</i>
+                            </a>
+                            <h5>Create</h5>
+                        </div>
+                        <div class="col s6 center-align">
+                            <a href="/goal/list" class="btn-floating btn-large waves-effect waves-light grey">
+                                <i class="material-icons">menu</i>
+                            </a>
+                            <h5>List</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col l4 s12 m4">
+            <h5>&nbsp;</h5><br>
+            <div class="card">
+                <div class="card-tabs">
+                    <ul class="tabs tabs-fixed-width">
+                        <li class="tab dw-blue-1">
+                            <a href="#user" class="left-align white-text">
+                                <i class="material-icons">group</i> <span class="tab-header"> Subordinate Goals </span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="card-content">
+                    <div class="row">
+                        <div class="col s12 center-align">
+                            <a href="/goal/list" class="btn-floating btn-large waves-effect waves-light">
+                                <i class="material-icons">visibility</i>
+                            </a>
+                            <h5>View</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
