--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -11,7 +11,7 @@
         </div>
         <div class="row">
             <div class="col l12 m12 s12 center-align">
-                <img src="../images/user.png" style="height: 25%; width: 25%;">
+                <a href="./profilePicture"><img src="../images/user.png" style="height: 25%; width: 25%;"></a>
                 <h4> John Doe </h4>
             </div>
         </div>
