Updated user profile id

--- a/views/goal/create.ejs
+++ b/views/goal/create.ejs
@@ -28,7 +28,7 @@
 
                                         <div class="input-field col l12 m12 s12">
                                             <i class="material-icons prefix">my_location</i>
-                                            <input type="hidden" name="id" value="<%= sess.id %>">
+                                            <input type="hidden" name="id" value="<%= sess.userId %>">
                                             <input id="goal" name="goal" type="text" class="validate" required>
                                             <label for="goal">Goal</label>
                                         </div>
