--- a/views/user/dashboard.ejs
+++ b/views/user/dashboard.ejs
@@ -19,7 +19,7 @@
                 <div class="card-content">
                     <div class="row">
                         <div class="col s12 center-align">
-                            <a href="/user/profile/?id=<%= sess.id %>" class="btn-floating btn-large waves-effect waves-light">
+                            <a href="/user/profile?id=<%= sess.userId %>" class="btn-floating btn-large waves-effect waves-light">
                                 <i class="material-icons">person</i>
                             </a>
                             <h5>View</h5>
