"Edit Profile Picture For User"

--- a/views/user/profilePicture.ejs
+++ b/views/user/profilePicture.ejs
@@ -23,7 +23,7 @@
                     <div class="card-content">
                         <div id="create">
                             <div class="row">
-                                <form method="post" enctype="multipart/form-data" action="/savePhoto">
+                                <form method="post" enctype="multipart/form-data" action="savePP">
                                     <label for="profilePicture">Profile Picture</label>
                                     <div class="input-field col s12">
                                         <i class="material-icons prefix">photo</i>
