--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -6,24 +6,31 @@
     <div class="container">
         <div class="row">
             <% if (manager) { %>
-            <h6>
-                Manager: <img src="../images/user.png" style="height: 4%; width: 4%; margin-bottom: -1%;"
+            <h6>Manager : </h6>
+            <img src="../profilePictures/<%=manager.imageName%>" onerror="this.src='../profilePictures/default.jpg'" style="height: 4%; width: 4%; margin-bottom: -1%;"
                               class="tooltipped" data-position="right" data-tooltip="<%= manager.name %>">
-            </h6>
-            <% } %>
+            <% }%>
         </div>
         <div class="row">
             <div class="col l12 m12 s12 center-align">
-                <img src="../images/user.png" style="height: 25%; width: 25%;">
+                <div class="conatiner">
+                    <a><img src="../profilePictures/<%=user.imageName%>" onerror="this.src='../profilePictures/default.jpg'" style="height: 25%; width: 25%;"></a>
+                    <div class="overlay">
+                        <a href="./profilePicture" class="icon">
+                            <i class="material-icons prefix">edit</i>
+                        </a>
+                    </div>
+                </div>
                 <h4> <%= user.name %> </h4>
-                <a href="./profilePicture"><img src="../images/user.png" style="height: 25%; width: 25%;"></a>
-                <h4> John Doe </h4>
             </div>
         </div>
         <div class="row">
-            <h6>
-                Subordinates <img src="../images/user.png" style="height: 4%; width: 4%; margin-bottom: -1%;"> <img src="../images/user.png" style="height: 4%; width: 4%; margin-bottom: -1%;">
-            </h6>
+            <% if (subordinates) { %>
+            <h6> Subordinates: </h6>
+            <% for(var i=0; i < subordinates.length; i++){
+            %>
+            <img src="../profilePictures/<%=subordinates[i].imageName%>" onerror="this.src='../profilePictures/default.jpg'" style="height: 4%; width: 4%; margin-bottom: -1%;" class="tooltipped" data-position="right" data-tooltip="<%=subordinates[i].name %>">
+            <% }}%>
         </div>
         <div class="row">
             <h6>
